Fjernet readme.adoc

--- a/summary.adoc
+++ b/summary.adoc
@@ -1,7 +1,7 @@
 = Summary
 
 . link:Kap/Introduction.adoc[Forord]
-. link:Kap/Leasing.adoc[Leasing-fakturaer]
+. link:Kap/Leasing.adoc[Leasingfakturaer]
 . link:Kap/Loans.adoc[Lånefakturaer]
 . link:Kap/Factoring.adoc[Factoring]
 . link:Kap/Sales.adoc[Salgsfaktura]
