--- a/Kap/Sales.adoc
+++ b/Kap/Sales.adoc
@@ -1,12 +1,14 @@
-== Salgsfaktura
+= Salgsfaktura
 
-Vanlige salgsfakturaer har ingen spesifikke informasjonskrav utover det som er angitt i vanlig EHF veileder.
+Generelle salgsfakturaer har ingen spesifikke informasjonskrav utover det som er angitt i
+https://test-vefa.difi.no/ehf/guide/invoice-and-creditnote/2.0/no/index.html[EHF Implementasjonsguide].
 
 Følgende varianter håndteres på samme måte som salgsfaktura, og finnes som eksempelfiler:
 
-* Netting-faktura
+#Legg inn lenker også#
+
 * Rentefaktura / forsinkelsesrente
-* Lagerfinansiering
+* Varelagerfinansiering
 * Ad-hoc faktura
 ** Avgiftsfaktura
 ** Ekstraordinære innbetalinger
